--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="favicon.ico" type ="images/dino.ico">
     <title>奥迪 | 创造性的摸鱼佬 </title>
     <link
       rel="mask-icon"
