--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>奥迪 | 创造性的摸鱼佬</title>
+    <title>creative|reliable programmer</title>
     <link rel="icon" href="favicon.ico" type="images/dino.ico" />
     <link
       rel="mask-icon"
