--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           <text class="landing-headline" y="60" x="5">你好, 老板</text>
           <text class="landing-headline" y="135" x="5">你可以叫我奥迪.</text>
           <text class="landing-subheading" x="10" y="185">
-            A well-done, efficient lazy programer
+            A well-done, efficient  programer
           </text>
           <foreignObject
             x="8"
