--- a/index.html
+++ b/index.html
@@ -536,10 +536,10 @@
                   y="7"
                 />
                 <text x="88" y="33" class="about-text">
-                  15岁接触编程通过一些工具在网吧实现破解,白嫖网吧
+                  15岁接触编程,并能够实际应用于现实生活中
                 </text>
                 <text x="88" y="50" class="about-text">
-                  而后进行多年的学习和实际项目积累
+                  而后进行多年的学习和项目积累,以及工作经验
                 </text>
               </g>
               <g transform="translate(10 145)">
@@ -572,7 +572,7 @@
                   transform="translate(417 5) scale(0.8)"
                 ></g>
                 <text x="5" y="33" class="about-text">
-                  在过去的几年里,网站接单和外包,培养了
+                  在过去的几年里,通过平台雇佣,外包,培养了
                 </text>
                 <text x="5" y="50" class="about-text">
                   快速获取,分析信息和主动学习的能力
@@ -604,7 +604,7 @@
                   在面对各种奇奇怪怪的bug和需求时,
                 </text>
                 <text x="88" y="50" class="about-text">
-                  培养了良好的心态和高效的沟通能力,
+                  有着良好的心态和高效的沟通能力,
                 </text>
                 <text x="88" y="67" class="about-text">
                   相比较于业务的熟练度,我认为上述能力更为重要.
